--- a/checkout.html
+++ b/checkout.html
@@ -75,7 +75,7 @@
           <div class="total-amount">
             <h2>Total Amount</h2>
             <p>Total Amount: Rs <span id="total-amount"></span></p>
-            <a href='/orderconfirm.html'>
+            <a href='/SHOPLANE/orderconfirm.html'>
               <button id="place-order">Place Order</button>
             </a>
           </div>
