Update orderconfirm.html/navlink changes

--- a/orderconfirm.html
+++ b/orderconfirm.html
@@ -41,9 +41,9 @@
       </div>
       <!-- Menu Items -->
       <ul class="nav-links">
-        <li><a href='/'>Home</a></li>
-        <li><a href='/#clothing'>Clothings</a></li>
-        <li><a href='/#accessories'>Accessories</a></li>
+        <li><a href='/SHOPLANE/'>Home</a></li>
+        <li><a href='/SHOPLANE/#clothing'>Clothings</a></li>
+        <li><a href='/SHOPLANE/#accessories'>Accessories</a></li>
       </ul>
       <!-- Icons -->
       <div class="icons">
