--- a/checkout.html
+++ b/checkout.html
@@ -17,13 +17,7 @@
       href="https://fonts.googleapis.com/css?family=Montserrat&display=swap"
       rel="stylesheet"
     />
-    <!-- Slick Files -->
-    <link rel="stylesheet" type="text/css" href="./slick/slick/slick.css" />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="./slick/slick/slick-theme.css"
-    />
+   
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
@@ -40,9 +34,9 @@
       </div>
       <!-- Menu Items -->
       <ul class="nav-links">
-        <li><a href='/SHOPLANE/'>Home</a></li>
-        <li><a href='/SHOPLANE/#clothing'>Clothings</a></li>
-        <li><a href='/SHOPLANE/#accessories'>Accessories</a></li>
+        <li><a href='/index.html'>Home</a></li>
+        <li><a href='/index.html/#clothing'>Clothings</a></li>
+        <li><a href='/index.html/#accessories'>Accessories</a></li>
       </ul>
       <!-- Icons -->
       <div class="icons">
