--- a/checkout.html
+++ b/checkout.html
@@ -34,9 +34,9 @@
       </div>
       <!-- Menu Items -->
       <ul class="nav-links">
-        <li><a href='/index.html'>Home</a></li>
-        <li><a href='/index.html/#clothing'>Clothings</a></li>
-        <li><a href='/index.html/#accessories'>Accessories</a></li>
+        <li><a href='/SHOPLANE/'>Home</a></li>
+        <li><a href='/SHOPLANE/#clothing'>Clothings</a></li>
+        <li><a href='/SHOPLANE/#accessories'>Accessories</a></li>
       </ul>
       <!-- Icons -->
       <div class="icons">
