--- a/product.html
+++ b/product.html
@@ -40,8 +40,8 @@
       <!-- Menu Items -->
       <ul class="nav-links">
         <li><a href="./index.html">Home</a></li>
-        <li><a href="/index.html#clothing">Clothings</a></li>
-        <li><a href="/index.html#accessories">Accessories</a></li>
+        <li><a href="/SHOPLANE/index.html#clothing">Clothings</a></li>
+        <li><a href="/SHOPLANE/index.html#accessories">Accessories</a></li>
       </ul>
       <!-- Icons -->
       <div class="icons">
