--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
 
   <!-- FOOTER SECTION START -->
   <footer>
+
     <ul class="online-store">
       <li>
         <h3>Online Store</h3>
@@ -166,6 +167,7 @@
       <li>LA - 902722</li>
       <li>United States</li>
     </ul>
+    <img src="./assets/imgs/Edyoda logo.png" width="100"  height="50" alt="logo">
   </footer>
 
   <!-- FOOTER SECTION END  -->
